--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
 
     <main class="container">
-        <!--Row for the image at the top of the page-->
+        <!--Row for the image at the top of the page------------------------------------------------------------------------------------------->
         <!--Picture from Upsplace. From Frances Gunn. IMG Found here: https://unsplash.com/photos/QcBAZ7VREHQ-->
         </br>
         </br>
@@ -42,22 +42,25 @@
         </br>
         </br>
 
-        <!--Section for an "About Me"-->
+
+
+        <!--Section for an "About Me"----------------------------------------------------------------------------------------------------------->
         <div class="row" id="aboutMePar">
-            <p class="AboutMePar">Hi!, my name is Eric. I have worked in Agriculture for several years. I always wanted to start
+            <p class="AboutMePar">Hi, my name is Eric. I have worked in Agriculture for several years. I always wanted to start
                 my own farm. What interested me about farming is that it is a simple and pure endevor. 
                 You are providing a basic human need, and also working with the earth. It allows you to work
-                with mother nature and provide a service that everyone needs. 
+                with mother nature, provide a service that everyone needs, and give back to the community. 
             </p>
             <p>
-                My farm will focus on growing a variety of healthy fruits and vegtables for the local community. People are begining to care much more about where their 
-                food comes from. Sourcing your food locally (when possible) is a great way to feed your family fresh food, as well as supporting your community. 
+                My farm will focus on growing a variety of healthy fruits and vegtables for the local community. People are begining to care much more
+                 about where their food comes from. Sourcing your food locally (when possible) is a great way to feed your family fresh food, as well
+                 as supporting your community. 
             </p>
         </div>
         </br>
         </br>
 
-        <!--Section for an "About Me"-->
+        <!--Section for a Map--------------------------------------------------------------------------------------------------------------------->
         <div class="row">
             <h1 id="locationHeader">Here is a map to our Farm </h1>
             <p id="hersheyPark">(note: this is Hershey Park, not acutally my farm)</p>
