--- a/order.html
+++ b/order.html
@@ -14,7 +14,7 @@
 
   <body>
 
-     <!-- Navigation Bar -->
+     <!-- Navigation Bar -------------------------------------------------------------------------------------------->
     <header class="header">
         <nav class="navbar navbar-style">
             <div class="container">
@@ -34,8 +34,8 @@
 
     <main class="container">
    
-    <!--Section for an DOWNLOAD link-->
-    </br>
+        <!--Section for an DOWNLOAD link------------------------------------------------------------------------------>
+        </br>
         <div class="row">
             <h4>Interested in joining our CSA Program?</h4>
             <p>Our Community Supported Agriculture program is a way to support local ag, as well as 
@@ -46,7 +46,7 @@
         </br>
         </br>
 
-        <!--Box where you can sort our products from high to low based on price or calories-->
+        <!--Box where you can sort our products from high to low based on price or calories---------------------------->
         <div class ="container" id="sortedProductsBox">
             <div class="row"> <h5>Before you place your order, use or product sorting feature:</h5></div>
             <div class="row">
@@ -62,8 +62,7 @@
             <div>
                 <span>Sorted by Price (highest to lowest): </span><span id="sortedFoodOutput"></span>
             </div>
-        
-
+            </br>
         
             <div class="row">
                 <div class="col">
@@ -77,13 +76,15 @@
 
             <div>
                 <span>Sorted by Calories (highest to lowest): </span><span id="sortFoodByCalsOutput"></span>
+                </div>
+            </br>
             </div>
          </div>
         </br>
         </br>
 
 
-         <!--Section for a Order Form. User can submit and order using a GET request-->
+         <!--Section for a Order Form. User can submit an order using a GET request------------------------------------------>
          <div class="row" id="orderForm">
             <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="get">
                 <fieldset>
