--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     
     <header class="header">
-        <!-- Navigation Bar -->
+        <!-- Navigation Bar ---------------------------------------------------------------------------------------------------->
         <nav class="navbar navbar-style">
             <div class="container">
                 <div class="navbar-header">
@@ -31,41 +31,38 @@
     </header>
 
 
+
+
     <main>
-        <!--Carrousel -->
-        <!--I followed the bootstap guide for this: https://getbootstrap.com/docs/5.0/components/carousel/-->
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-
-              <!--IMG1 By Erwan Hesry. Found on Usplash. Location: https://unsplash.com/photos/1q75BReKpms-->
-              <img src="img/greenhouse.jpg" class="d-block w-100" alt="greenhouse" height="700">
-            </div>
-            <div class="carousel-item">
-              <!--IMG2 By Harits Mustya Pratama. Found on Usplash. Location: https://unsplash.com/photos/F47-qMQzVwQ-->
-              <img src="img/greenhouse2.jpg" class="d-block w-100" alt="greenhouse2" height="700">
-            </div>
-            <div class="carousel-item">
-              <!--IMG3 Abigail Lynn. Found on Usplash. Location: https://unsplash.com/photos/7N45aBlDn-k-->
-              <img src="img/greenhouse3.jpg" class="d-block w-100" alt="greenhouse3" height="700">
-            </div>
-          </div>
-          <!--Buttons for carosel-->
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+      <!--Carousel -------------------------------------------------------------------------------------------------------------->
+      <div class="carousel">
+        <div class="carousel__item visibleIMG">
+          <!--IMG1 By Erwan Hesry. Found on Usplash. Location: https://unsplash.com/photos/1q75BReKpms-->
+          <img src="img/greenhouse.jpg"/>
         </div>
+        <div class="carousel__item">
+          <!--IMG2 By Harits Mustya Pratama. Found on Usplash. Location: https://unsplash.com/photos/F47-qMQzVwQ-->
+          <img src="img/greenhouse2.jpg"/>
+        </div>
+        <div class="carousel__item">
+          <!--IMG3 Abigail Lynn. Found on Usplash. Location: https://unsplash.com/photos/7N45aBlDn-k-->
+          <img src="img/greenhouse3.jpg"/>
+        </div>
+  
+        <div class="carousel__actions">
+          <button id="prevButton">Prev</button>
+          <button id="nextButton">Next</button>
+        </div>
+      </div>
+    </main>
 
       </br>
       </br>
       </br>
 
-      <!--Submit button to get the weather-->
+
+
+      <!--Weather submission and respons----------------------------------------------------------------------------------------->
       <div class ="container">
           <div class="row">
             </br>
@@ -74,7 +71,7 @@
           </div> 
           </br>
             <div>
-              <span>Today's Weather:</span><span id="weatherOutput"></span>
+              <span>Today's Tempurature at the Farm:</span><span id="weatherOutput"></span>
             </div>
       </div>
 
@@ -82,41 +79,45 @@
       </br>
       </br>
 
-        <!-- Welcome text, and customer reviews at bottom of page -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4" style="height:300px;width:450px;border:1px solid #000000;">
-                    <h4>Hours of Operation</h4>
-                    <p>Mondaly: 10-7</p>
-                    <p>Tuesday: 10-7</p>
-                    <p>Wednesday: 10-7</p>
-                    <p>Thursday: 10-7</p>
-                    <p>Friday: 10-7</p>
-                    <p>Saturday: 10-7</p>
-                    <p>Sunday: Closed</p>
-                </div>
 
-               <!--this div is to put space between my two boxes--> 
-              <div class="col-md-2">
+
+        <!-- Welcome text, and customer reviews at bottom of page ------------------------------------------------------------------->
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4" style="height:300px;width:450px;border:1px solid #000000;">
+                  <h4>Hours of Operation</h4>
+                  <p>Mondaly: 10-7</p>
+                  <p>Tuesday: 10-7</p>
+                  <p>Wednesday: 10-7</p>
+                  <p>Thursday: 10-7</p>
+                  <p>Friday: 10-7</p>
+                  <p>Saturday: 10-7</p>
+                  <p>Sunday: Closed</p>
               </div>
 
-              <!--This is the scroll box-->
-              <div class="col-md-4" id="scrollBar" style="height:300px;width:450px;border:1px solid #000000;">
-                  <h4>Customer Reviews</h4>
-                  <p>Michael Scott: "Best Apples in PA" </p></br>
-                  <p>Toby F: "Great Customer Service" </p></br>
-                  <p>Pam B: "Very beautiful place. Great place to go for a weekend trip " </p></br>
-                  <p>Stanley H: "I wish they had donuts"</p></br>
-                  <p>Phylis: "Me and Bob went. It was wonderful. Bob bought me roses from there" </p></br>
-                  <p>Angela: "They had cats. I love cats" </p></br>
-                  <p>Kevin: "mmmmmmmmmmmmmmmmm" </p></br>
-                  <p>Oscar: "Well actually, its technically a orchard not a farm, but it was good anyways." </p></br>
-                  <p>Holly Flax: "FANNNTASTIC! Will be going back!" </p></br>
-
-              </div>
+              <!--this div is to put space between my two boxes--> 
+            <div class="col-md-2">
             </div>
-        </div>
-      </main>
+
+            <!--This is the scroll box-->
+            <div class="col-md-4" id="scrollBar" style="height:300px;width:450px;border:1px solid #000000;">
+                <h4>Customer Reviews</h4>
+                <p>Michael Scott: "Best Apples in PA" </p></br>
+                <p>Toby F: "Great Customer Service" </p></br>
+                <p>Pam B: "Very beautiful place. Great place to go for a weekend trip " </p></br>
+                <p>Stanley H: "I wish they had donuts"</p></br>
+                <p>Phylis: "Me and Bob went. It was wonderful. Bob bought me roses from there" </p></br>
+                <p>Angela: "They had cats. I love cats" </p></br>
+                <p>Kevin: "mmmmmmmmmmmmmmmmm" </p></br>
+                <p>Oscar: "Well actually, its technically a orchard not a farm, but it was good anyways." </p></br>
+                <p>Holly Flax: "FANNNTASTIC! Will be going back!" </p></br>
+
+            </div>
+          </div>
+      </div>
+    </br>
+    </br>
+    </br>
 
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
