--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
 
   <body>
 
-     <!-- Navigation Bar -->
+     <!-- Navigation Bar ------------------------------------------------------------------------------------------------->
     <header class="header">
         <nav class="navbar navbar-style">
             <div class="container">
@@ -33,7 +33,7 @@
 
 
     <main class="container">
-        <!--Row for the image at the top of the page-->
+        <!--Row for the image at the top of the page------------------------------------------------------------------------>
         </br>
         </br>
         <div class="row">
@@ -43,7 +43,9 @@
         </br>
         </br>
 
-        <!--Section for a subscription Form. Uses a GET request-->
+
+
+        <!--Section for a subscription Form. Uses a GET request---------------------------------------------------------------->
         <div class="row" id="subscribeBox">
             <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="get">
                 <fieldset>
@@ -68,7 +70,9 @@
         </br>
         </br>
 
-        <!--Creats a list on the left for products, and a list on the right for recipies-->
+
+        
+        <!--Creats a list on the left for products, and a list on the right for recipies---------------------------------------------->
         <!--I am using bootsrap lists: https://getbootstrap.com/docs/5.0/components/list-group/-->
         <div class="row">
             <div class="col">
